Added projects to homepage

--- a/index.html
+++ b/index.html
@@ -24,34 +24,76 @@
     <link rel="stylesheet" href="/styles/portfolio.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Emily Godwin</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ml-auto">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">About</a>
-            <a class="nav-link" href="#">Work</a>
-            <a class="nav-link" href="#">Contact</a>
+    <div class="hero">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Emily Godwin</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ml-auto">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="#">Work</a>
+              <a class="nav-link" href="#">Contact</a>
+            </div>
           </div>
         </div>
+      </nav>
+      <h2>Hello I am</h2>
+      <h1 class="text-center">Emily Godwin</h1>
+      <p class="text-center">
+        Frontend Developer, based in Madison, Wisconsin.
+      </p>
+      <a class="main-button" href="#">Contact Me</a>
+    </div>
+    <p class="title">Featured Projects</p>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <img
+            src="/images/gouache.png"
+            alt="gouache project"
+            width="560"
+            height="560"
+          />
+        </div>
+        <div class="col">
+          <h3>Gouache Project</h3>
+          <p class="about">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+          <a href="#" class="project-button">View Project</a>
+        </div>
       </div>
-    </nav>
-    <h2>Hi I am</h2>
-    <h1 class="text-center">Emily Godwin</h1>
-    <p class="text-center">Frontend Developer, based in Madison, Wisconsin.</p>
-    <a class="main-button" href="#">Get Started</a>
+      <div class="row">
+        <div class="col">
+          <h3>Weather App</h3>
+          <p class="about">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+          <a href="#" class="project-button">View Project</a>
+        </div>
+        <div class="col">
+          <img src="/images/weatherApp.png" alt="Weather App" />
+        </div>
+      </div>
+    </div>
   </body>
   <script
     src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
