Made responsive for smaller screens

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
     <p class="title">Featured Projects</p>
     <div class="container">
       <div class="row">
-        <div class="col">
+        <div class="col d-none d-sm-block">
           <img
+            class="d-none d-sm-block"
             src="/images/gouache.png"
             alt="gouache project"
             width="560"
@@ -89,8 +90,12 @@
           </p>
           <a href="#" class="project-button">View Project</a>
         </div>
-        <div class="col">
-          <img src="/images/weatherApp.png" alt="Weather App" />
+        <div class="col d-none d-sm-block">
+          <img
+            class="d-none d-sm-block"
+            src="/images/weatherApp.png"
+            alt="Weather App"
+          />
         </div>
       </div>
     </div>
