--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <title>Emily Godwin-Portfolio</title>
     <script
       src="https://kit.fontawesome.com/e1c7d32db3.js"
       crossorigin="anonymous"
@@ -42,7 +42,7 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ml-auto">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="/about.html">About</a>
               <a class="nav-link" href="#">Work</a>
               <a class="nav-link" href="#">Contact</a>
             </div>
