Added work page.
Added work page with html.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="navbar-nav ml-auto">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
               <a class="nav-link" href="/about.html">About</a>
-              <a class="nav-link" href="#">Work</a>
+              <a class="nav-link" href="/work.html">Work</a>
               <a class="nav-link" href="#">Contact</a>
             </div>
           </div>
@@ -61,7 +61,7 @@
       <div class="row">
         <div class="col d-none d-sm-block">
           <img
-            class="d-none d-sm-block"
+            class="d-none d-sm-block img-fluid"
             src="/images/gouache.png"
             alt="gouache project"
             width="560"
@@ -92,7 +92,7 @@
         </div>
         <div class="col d-none d-sm-block">
           <img
-            class="d-none d-sm-block"
+            class="d-none d-sm-block img-fluid"
             src="/images/weatherApp.png"
             alt="Weather App"
           />
