--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Me-Emily Godwin</title>
+    <title>Emily Godwin-Works</title>
     <script
       src="https://kit.fontawesome.com/e1c7d32db3.js"
       crossorigin="anonymous"
@@ -22,16 +22,6 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/styles/portfolio.css" />
-    <style>
-      .about-title {
-        font-family: "Playfair Display";
-        text-align: start;
-        font-weight: 700;
-        font-size: 64px;
-        color: #000000;
-        margin-bottom: 30px;
-      }
-    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg">
@@ -51,30 +41,33 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
             <a class="nav-link" href="/index.html">Home</a>
-            <a class="nav-link active" aria-current="page" href="#">About</a>
-            <a class="nav-link" href="/work.html">Work</a>
+            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link active" aria-current="page" href="#">Work</a>
             <a class="nav-link" href="#">Contact</a>
           </div>
         </div>
       </div>
     </nav>
-    <div class="container">
+    <h1 class="work-heading">Take a look at what I've been working on!</h1>
+    <div class="container work-container">
       <div class="row">
-        <div class="col">
-          <h1 class="about-title">Hi I am Emily Godwin</h1>
-          <h2 class="about-info">
-            Frontend Developer, based in Madison, Wisconsin.
-          </h2>
-          <p class="about">
-            For anyone who wants to start learning code, this workshop is very
-            interesting. You will be challenged with different exercises, and
-            everything is well explained, homework and deadlines are good for
-            keep focus
-          </p>
-          <a class="projects-button" href="#">View all Projects</a>
+        <div class="col work-col">
+          <div class="row">
+            <img src="/images/gouache.png" class="work-pic img-fluid" />
+          </div>
+          <div class="row">
+            <h2 class="work-name">Gouache Project</h2>
+            <p>Frontend Developer</p>
+          </div>
         </div>
-        <div class="col">
-          <img src="/images/profile.jpeg" class="img-fluid" />
+        <div class="col work-col">
+          <div class="row">
+            <img src="/images/weatherApp.png" class="work-pic img-fluid" />
+          </div>
+          <div class="row">
+            <h2 class="work-name">Weather App</h2>
+            <p>Frontend Developer</p>
+          </div>
         </div>
       </div>
     </div>
