--- a/index.html
+++ b/index.html
@@ -25,74 +25,52 @@
   </head>
   <body>
     <div class="hero">
-      <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Emily Godwin</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ml-auto">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="/about.html">About</a>
-              <a class="nav-link" href="/work.html">Work</a>
-              <a class="nav-link" href="#">Contact</a>
-            </div>
-          </div>
-        </div>
-      </nav>
       <h2>Hello I am</h2>
-      <h1 class="text-center">Emily Godwin</h1>
-      <p class="text-center">
-        Frontend Developer, based in Madison, Wisconsin.
-      </p>
-      <a class="main-button" href="#">Contact Me</a>
+      <h1>Emily Godwin</h1>
+      <p class="mb-5">Frontend Developer, based in Madison, Wisconsin.</p>
+      <div>
+        <a class="btn-branding" href="#">Contact Me</a>
+      </div>
     </div>
-    <p class="title">Featured Projects</p>
+    <p class="text-center m-5">Featured Projects</p>
     <div class="container">
-      <div class="row">
-        <div class="col d-none d-sm-block">
+      <div class="row mb-5">
+        <div class="col-6 d-none d-lg-block">
           <img
-            class="d-none d-sm-block img-fluid"
+            class="img-fluid"
             src="/images/gouache.png"
             alt="gouache project"
-            width="560"
-            height="560"
           />
         </div>
         <div class="col">
-          <h3>Gouache Project</h3>
-          <p class="about">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
-          <a href="#" class="project-button">View Project</a>
+          <div class="project-description">
+            <h2 class="mb-5">Gouache Project</h2>
+            <p class="mb-5">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+            <a href="#" class="btn btn-brandin-outline">View Project</a>
+          </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row mb-5">
         <div class="col">
-          <h3>Weather App</h3>
-          <p class="about">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
-          <a href="#" class="project-button">View Project</a>
+          <div class="project-description">
+            <h2 class="mb-5">Weather App</h2>
+            <p class="mb-5">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+            <a href="#" class="btn btn-brandin-outline">View Project</a>
+          </div>
         </div>
-        <div class="col d-none d-sm-block">
+        <div class="col-6 d-none d-sm-block">
           <img
-            class="d-none d-sm-block img-fluid"
+            class="img-fluid"
             src="/images/weatherApp.png"
             alt="Weather App"
           />
