--- a/work.html
+++ b/work.html
@@ -24,49 +24,24 @@
     <link rel="stylesheet" href="/styles/portfolio.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Emily Godwin</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ml-auto">
-            <a class="nav-link" href="/index.html">Home</a>
-            <a class="nav-link" href="/about.html">About</a>
-            <a class="nav-link active" aria-current="page" href="#">Work</a>
-            <a class="nav-link" href="#">Contact</a>
+    <div class="content-container container">
+      <div class="content">
+        <h1 class="mb-5">Take a look at what I've been working on!</h1>
+
+        <div class="row">
+          <div class="col-md-6 mb-4">
+            <img
+              src="/images/gouache.png"
+              class="img-fluid mb-3"
+              alt="gouache project"
+            />
+            <h3 class="text-center m-0">Gouache Project</h3>
+            <p class="text-center">Built with HTML and CSS</p>
           </div>
-        </div>
-      </div>
-    </nav>
-    <h1 class="work-heading">Take a look at what I've been working on!</h1>
-    <div class="container work-container">
-      <div class="row">
-        <div class="col work-col">
-          <div class="row">
-            <img src="/images/gouache.png" class="work-pic img-fluid" />
-          </div>
-          <div class="row">
-            <h2 class="work-name">Gouache Project</h2>
-            <p>Frontend Developer</p>
-          </div>
-        </div>
-        <div class="col work-col">
-          <div class="row">
-            <img src="/images/weatherApp.png" class="work-pic img-fluid" />
-          </div>
-          <div class="row">
-            <h2 class="work-name">Weather App</h2>
-            <p>Frontend Developer</p>
+          <div class="col-md-6 mb-4">
+            <img src="/images/weatherApp.png" class="img-fluid mb-3" />
+            <h3 class="text-center m-0">Weather App</h3>
+            <p class="text-center">Built with HTML, CSS and JavaScript</p>
           </div>
         </div>
       </div>
