--- a/index.html
+++ b/index.html
@@ -24,12 +24,46 @@
     <link rel="stylesheet" href="/styles/portfolio.css" />
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg">
+      <a class="navbar-brand" href="/about.html">Emily Godwin</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon icon-dark"
+          ><i class="fa-solid fa-bars"></i
+        ></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link current" href="#"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/work.html">Work</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <div class="hero">
       <h2>Hello I am</h2>
       <h1>Emily Godwin</h1>
       <p class="mb-5">Frontend Developer, based in Madison, Wisconsin.</p>
       <div>
-        <a class="btn-branding" href="#">Contact Me</a>
+        <a class="btn-branding" href="/contact.html">Contact Me</a>
       </div>
     </div>
     <p class="text-center m-5">Featured Projects</p>
@@ -51,7 +85,12 @@
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex ea commodo consequat.
             </p>
-            <a href="#" class="btn btn-brandin-outline">View Project</a>
+            <a
+              href="https://www.shecodes.io/workshops/shecodes-basics-948b080f-f680-4a22-b8bd-8d57ae6ee387/projects/726733"
+              class="btn btn-brandin-outline"
+              target="_blank"
+              >View Project</a
+            >
           </div>
         </div>
       </div>
@@ -65,7 +104,12 @@
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex ea commodo consequat.
             </p>
-            <a href="#" class="btn btn-brandin-outline">View Project</a>
+            <a
+              href="https://lucky-treacle-455da5.netlify.app/"
+              class="btn btn-brandin-outline"
+              target="_blank"
+              >View Project</a
+            >
           </div>
         </div>
         <div class="col-6 d-none d-sm-block">
