Made website SEO friendly

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Emily Godwin-Portfolio</title>
+    <meta
+      name="description"
+      content="Emily is a front-end engineer based in Madison, Wisconsin."
+    />
+    <title>Front-end developer - Emily Godwin</title>
     <script
       src="https://kit.fontawesome.com/e1c7d32db3.js"
       crossorigin="anonymous"
@@ -25,7 +29,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg">
-      <a class="navbar-brand" href="/about.html">Emily Godwin</a>
+      <a class="navbar-brand" href="/index.html">🌷Emily Godwin</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -42,7 +46,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link current" href="#"
+            <a class="nav-link current" href="/index.html"
               >Home <span class="sr-only">(current)</span></a
             >
           </li>
@@ -139,9 +143,7 @@
           <a href="https://www.instagram.com/emilygodwin14/" target="_blank"
             ><i class="fa-brands fa-instagram"></i
           ></a>
-          <a
-            href="https://github.com/EmilyGodwin/Portfolio/settings"
-            target="_blank"
+          <a href="https://github.com/EmilyGodwin" target="_blank"
             ><i class="fa-brands fa-github"></i
           ></a>
           <a href="https://twitter.com/CreepyBeetle" target="_blank"
@@ -150,6 +152,14 @@
         </div>
       </footer>
     </div>
+    <p class="text-center mt-5">
+      This Project was coded by Emily Godwin, and it is
+      <a
+        href="https://github.com/EmilyGodwin/Portfolio-Homework"
+        target="_blank"
+        >open-sourced</a
+      >.
+    </p>
   </body>
   <script
     src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
