--- a/work.html
+++ b/work.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Emily Godwin-Works</title>
+    <meta
+      name="description"
+      content="Projects of Emily Godwin. Emily is a front-end engineer based in Madison, Wisconsin."
+    />
+    <title>Projects - Emily Godwin</title>
     <script
       src="https://kit.fontawesome.com/e1c7d32db3.js"
       crossorigin="anonymous"
@@ -25,7 +29,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg">
-      <a class="navbar-brand" href="/about.html">Emily Godwin</a>
+      <a class="navbar-brand" href="/index.html">🌷Emily Godwin</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -48,7 +52,7 @@
             <a class="nav-link" href="/about.html">About</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link current" href="#"
+            <a class="nav-link current" href="/work.html"
               >Work<span class="sr-only">(current)</span></a
             >
           </li>
@@ -79,6 +83,41 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let's Work Together</p>
+          </div>
+          <div>
+            <a href="/contact.html" class="btn btn-branding mt-3">Contact Me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:godwie20@gmail.com" class="email-link"
+            >Godwie20@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://www.instagram.com/emilygodwin14/" target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="https://github.com/EmilyGodwin" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a href="https://twitter.com/CreepyBeetle" target="_blank"
+            ><i class="fa-brands fa-twitter"></i
+          ></a>
+        </div>
+      </footer>
     </div>
+    <p class="text-center mt-5">
+      This Project was coded by Emily Godwin, and it is
+      <a
+        href="https://github.com/EmilyGodwin/Portfolio-Homework"
+        target="_blank"
+        >open-sourced</a
+      >.
+    </p>
   </body>
 </html>
