--- a/about.html
+++ b/about.html
@@ -71,10 +71,9 @@
               Frontend Developer, based in Madison, Wisconsin.
             </h2>
             <p class="mb-4">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
+              I started to learn coding in high school but started creating
+              projects in 2022. I love coding and want to continue creating with
+              what I have learned.
             </p>
             <a href="/work.html" class="btn btn-branding">View my Projects</a>
           </div>
