--- a/index.html
+++ b/index.html
@@ -84,10 +84,9 @@
           <div class="project-description">
             <h2 class="mb-5">Gouache Project</h2>
             <p class="mb-5">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
+              This is my first project I had worked on. I created a simple
+              website with html and css. A project about gouache paint. This
+              project made me love coding and want to learn more.
             </p>
             <a
               href="https://www.shecodes.io/workshops/shecodes-basics-948b080f-f680-4a22-b8bd-8d57ae6ee387/projects/726733"
@@ -103,10 +102,10 @@
           <div class="project-description">
             <h2 class="mb-5">Weather App</h2>
             <p class="mb-5">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
+              This is my second project I have worked on. A five day forecast
+              weather app. It is created with HTML, CSS and JavaScript. I
+              utilized bootstrap and a weather api. This project showed me how
+              much can be done with coding.
             </p>
             <a
               href="https://lucky-treacle-455da5.netlify.app/"
